--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <div class="mt-8 grid lg:grid-cols-3 gap-10">
                     <!--cards go here-->
-                    <a href="food1.html">
+                    <a href="./public/food1.html">
                         <div class="card hover:shadow-lg cursor-pointer">
                             <img src="img/food1.jpg" alt="food1" class="w-full h-32 sm:h-48 object-cover" >
                             <div class="m-4">
@@ -85,7 +85,7 @@
                         </div>
                     </a>
                     
-                    <a href="food2.html">
+                    <a href="./public/food2.html">
                         <div class="card hover:shadow-lg cursor-pointer">
                             <img src="img/food2.jpg" alt="food1" class="w-full h-32 sm:h-48 object-cover" >
                             <div class="m-4">
@@ -102,7 +102,7 @@
                         </div>
                     </a>
 
-                    <a href="food3.html">
+                    <a href="./public/food3.html">
                         <div class="card hover:shadow-lg cursor-pointer">
                             <img src="img/food3.jpg" alt="food1" class="w-full h-32 sm:h-48 object-cover" >
                             <div class="m-4">
