--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./public/styles.css">
 </head>
 <body class="text-gray-600 font-body">
 
@@ -71,7 +71,7 @@
                     <!--cards go here-->
                     <a href="./public/food1.html">
                         <div class="card hover:shadow-lg cursor-pointer">
-                            <img src="img/food1.jpg" alt="food1" class="w-full h-32 sm:h-48 object-cover" >
+                            <img src="./public/img/food1.jpg" alt="food1" class="w-full h-32 sm:h-48 object-cover" >
                             <div class="m-4">
                                 <span class="font-bold">Creamy Rice Mac and Cheese</span>
                                 <span class="block text-gray-500 text-sn">Recipe by Mario</span>
@@ -87,7 +87,7 @@
                     
                     <a href="./public/food2.html">
                         <div class="card hover:shadow-lg cursor-pointer">
-                            <img src="img/food2.jpg" alt="food1" class="w-full h-32 sm:h-48 object-cover" >
+                            <img src="./public/img/food2.jpg" alt="food1" class="w-full h-32 sm:h-48 object-cover" >
                             <div class="m-4">
                                 <span class="font-bold">Jamaican Jerk Chicken</span>
                                 <span class="block text-gray-500 text-sn">Recipe by Mario</span>
@@ -104,7 +104,7 @@
 
                     <a href="./public/food3.html">
                         <div class="card hover:shadow-lg cursor-pointer">
-                            <img src="img/food3.jpg" alt="food1" class="w-full h-32 sm:h-48 object-cover" >
+                            <img src="./public/img/food3.jpg" alt="food1" class="w-full h-32 sm:h-48 object-cover" >
                             <div class="m-4">
                                 <span class="font-bold">Avocado Salad</span>
                                 <span class="block text-gray-500 text-sn">Recipe by Mario</span>
